[gd_scene load_steps=21 format=3]

[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/undo.svg" id="1_a4hem"]
[ext_resource type="Script" path="res://Base/WorldEditorUI/WorldEditorUI.gd" id="1_kdydk"]
[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/redo.svg" id="2_g8go6"]
[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/cursor-normal.svg" id="2_g33n0"]
[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/cursor-move.svg" id="3_evb7p"]
[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/select-move.svg" id="3_xkg5s"]
[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/cursor-rotate.svg" id="4_lh4ej"]
[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/delete.svg" id="4_vljnu"]
[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/rotate.svg" id="5_co538"]
[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/cursor-mirror.svg" id="5_x1l62"]
[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/cursor-scale.svg" id="6_3a64l"]
[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/mirror.svg" id="6_frc30"]
[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/cursor-delete.svg" id="6_h4ypi"]
[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/cursor-pencil.svg" id="7_kcx5t"]
[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/line.svg" id="7_pyvcg"]
[ext_resource type="Script" path="res://Base/SelectionBox.gd" id="8_3dr2u"]
[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/scale.svg" id="11_865rq"]
[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/import.svg" id="11_a2raq"]
[ext_resource type="Texture2D" path="res://Base/WorldEditorUI/ui_icons/save.svg" id="12_saxks"]

[sub_resource type="ButtonGroup" id="ButtonGroup_05y61"]

[node name="WorldEditorUI" type="Node2D"]
script = ExtResource("1_kdydk")
select_cursor = ExtResource("2_g33n0")
move_cursor = ExtResource("3_evb7p")
rotate_cursor = ExtResource("4_lh4ej")
mirror_cursor = ExtResource("5_x1l62")
scale_cursor = ExtResource("6_3a64l")
delete_cursor = ExtResource("6_h4ypi")
draw_cursor = ExtResource("7_kcx5t")
draw_cursor_hotspot = Vector2(0, 32)
add_element_cursor = ExtResource("2_g33n0")

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="LeftPanel" type="VBoxContainer" parent="UI"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 148.0
grow_vertical = 2
theme_override_constants/separation = 0

[node name="FixedButtons" type="MarginContainer" parent="UI/LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/LeftPanel/FixedButtons"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Actions" type="GridContainer" parent="UI/LeftPanel/FixedButtons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="Import" type="Button" parent="UI/LeftPanel/FixedButtons/VBoxContainer/Actions"]
layout_mode = 2
tooltip_text = "EDITOR_IMPORT_TOOLTIP"
focus_mode = 0
icon = ExtResource("11_a2raq")

[node name="Save" type="Button" parent="UI/LeftPanel/FixedButtons/VBoxContainer/Actions"]
layout_mode = 2
tooltip_text = "EDITOR_SAVE_TOOLTIP"
focus_mode = 0
icon = ExtResource("12_saxks")

[node name="Undo" type="Button" parent="UI/LeftPanel/FixedButtons/VBoxContainer/Actions"]
layout_mode = 2
tooltip_text = "EDITOR_UNDO_TOOLTIP"
focus_mode = 0
icon = ExtResource("1_a4hem")

[node name="Redo" type="Button" parent="UI/LeftPanel/FixedButtons/VBoxContainer/Actions"]
layout_mode = 2
tooltip_text = "EDITOR_REDO_TOOLTIP"
focus_mode = 0
icon = ExtResource("2_g8go6")

[node name="HSeparator1" type="HSeparator" parent="UI/LeftPanel/FixedButtons/VBoxContainer"]
layout_mode = 2

[node name="Tools" type="GridContainer" parent="UI/LeftPanel/FixedButtons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="SelectMove" type="Button" parent="UI/LeftPanel/FixedButtons/VBoxContainer/Tools"]
layout_mode = 2
tooltip_text = "EDITOR_SELECT_MOVE_TOOLTIP"
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_05y61")
icon = ExtResource("3_xkg5s")

[node name="Scale" type="Button" parent="UI/LeftPanel/FixedButtons/VBoxContainer/Tools"]
layout_mode = 2
tooltip_text = "EDITOR_SCALE_RESIZE_TOOLTIP"
toggle_mode = true
button_group = SubResource("ButtonGroup_05y61")
icon = ExtResource("11_865rq")

[node name="Rotate" type="Button" parent="UI/LeftPanel/FixedButtons/VBoxContainer/Tools"]
layout_mode = 2
tooltip_text = "EDITOR_ROTATE_TOOLTIP"
toggle_mode = true
button_group = SubResource("ButtonGroup_05y61")
icon = ExtResource("5_co538")

[node name="Mirror" type="Button" parent="UI/LeftPanel/FixedButtons/VBoxContainer/Tools"]
layout_mode = 2
tooltip_text = "EDITOR_MIRROR_TOOLTIP"
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_05y61")
icon = ExtResource("6_frc30")

[node name="Delete" type="Button" parent="UI/LeftPanel/FixedButtons/VBoxContainer/Tools"]
layout_mode = 2
tooltip_text = "EDITOR_DELETE_TOOLTIP"
toggle_mode = true
button_group = SubResource("ButtonGroup_05y61")
icon = ExtResource("4_vljnu")

[node name="HSeparator2" type="HSeparator" parent="UI/LeftPanel/FixedButtons/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="UI/LeftPanel"]
unique_name_in_owner = true
layout_direction = 3
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ScrollableButtons" type="MarginContainer" parent="UI/LeftPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="AddElements" type="GridContainer" parent="UI/LeftPanel/ScrollContainer/ScrollableButtons"]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 2
columns = 2

[node name="Line" type="Button" parent="UI/LeftPanel/ScrollContainer/ScrollableButtons/AddElements"]
layout_mode = 2
tooltip_text = "EDITOR_LINE_TOOL_TOOLTIP"
toggle_mode = true
button_group = SubResource("ButtonGroup_05y61")
icon = ExtResource("7_pyvcg")

[node name="FileDialog" type="FileDialog" parent="UI"]
unique_name_in_owner = true
initial_position = 3
size = Vector2i(600, 350)
current_screen = 0
ok_button_text = "Save"
access = 2

[node name="SelectionBox" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("8_3dr2u")

[connection signal="pressed" from="UI/LeftPanel/FixedButtons/VBoxContainer/Actions/Import" to="." method="_on_import_pressed"]
[connection signal="pressed" from="UI/LeftPanel/FixedButtons/VBoxContainer/Actions/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="UI/LeftPanel/FixedButtons/VBoxContainer/Actions/Undo" to="." method="_on_undo_pressed"]
[connection signal="pressed" from="UI/LeftPanel/FixedButtons/VBoxContainer/Actions/Redo" to="." method="_on_redo_pressed"]
[connection signal="pressed" from="UI/LeftPanel/FixedButtons/VBoxContainer/Tools/SelectMove" to="." method="_on_ui_tool_selected"]
[connection signal="pressed" from="UI/LeftPanel/FixedButtons/VBoxContainer/Tools/Scale" to="." method="_on_ui_tool_selected"]
[connection signal="pressed" from="UI/LeftPanel/FixedButtons/VBoxContainer/Tools/Rotate" to="." method="_on_ui_tool_selected"]
[connection signal="pressed" from="UI/LeftPanel/FixedButtons/VBoxContainer/Tools/Mirror" to="." method="_on_ui_tool_selected"]
[connection signal="pressed" from="UI/LeftPanel/FixedButtons/VBoxContainer/Tools/Delete" to="." method="_on_ui_tool_selected"]
[connection signal="pressed" from="UI/LeftPanel/ScrollContainer/ScrollableButtons/AddElements/Line" to="." method="_on_ui_tool_selected"]
[connection signal="file_selected" from="UI/FileDialog" to="." method="_on_file_dialog_file_selected"]
